Update AutomateActivityTests.java